# PurposeOS

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
purposeos/: __init__.py  __main__.py  adctl.py  main.py
purposeos/cli/: __init__.py  _config_io.py  _output.py  action_cmds.py  daemon_cmds.py  gui_cmds.py  meta_cmds.py  notes_cmds.py  parser.py  reminder_cmds.py  stats_cmds.py
purposeos/core/: __init__.py  config.py
purposeos/daemon/: __init__.py  actions.py  scheduler.py  watcher.py
purposeos/data/: __init__.py  stats.py
purposeos/data/tracker/: __init__.py  db.py  detection.py  tracker.py
purposeos/gui/: _config_bridge.py  _helpers.py  _style.py  main.py  quicknote.py
purposeos/gui/dialogs/: __init__.py  action.py  note.py  reminder.py
purposeos/gui/widgets/: __init__.py  stats_chart.py
purposeos/i18n/: __init__.py  ar.json  en.json  fr.json  ru.json
purposeos/notes/: __init__.py  cli.py  editor.py  storage.py
purposeos/notifications/: __init__.py  interactions.py  notifications.py  sound.py
purposeos/ui/: __init__.py  overlay.py
scripts/: install.sh  purposeos.service  set_gui_shortcut.sh  set_notes_shortcut.sh  uninstall.sh  update.sh
tests/: test_adctl.py  test_config_i18n.py  test_scheduler.py
